--- a/app/index.html
+++ b/app/index.html
@@ -207,15 +207,24 @@
       <div class="inner">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-sm-4">
+            <div class="col-md-4 col-sm-6 col-xs-12">
               <div class="title-go">
                 <h2>ОРГАНИЗАТОРЫ <br>КОНФЕРЕНЦИИ</h2>
               </div>
+              <div class="left-org"><img src="img/vox.png"></div>
             </div>
-            <div class="col-sm-8">
+            <div class="col-md-8 col-sm-6 col-xs-12">
               <div class="right-organize">
                 <div class="title-go">
                   <h2>ПАРТНЕРЫ <br>КОНФЕРЕНЦИИ</h2>
+                </div>
+                <div class="right-org">
+                  <ul>
+                    <li><img src="img/p1.jpg"></li>
+                    <li><img src="img/p2.jpg"></li>
+                    <li><img src="img/p3.jpg"></li>
+                    <li><img src="img/p4.jpg"></li>
+                  </ul>
                 </div>
               </div>
             </div>
