--- a/app/index.html
+++ b/app/index.html
@@ -203,6 +203,49 @@
         </div>
       </div>
     </div>
+    <div class="vote-new">
+      <div class="inner">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="title-go title-go-all">
+                <h2>Что нового в этом году</h2>
+              </div>
+              <ul>
+                <li>
+                  <div class="img-left-vote"><img src="img/new1.png"></div>
+                  <p>Двухдневный формат<br> конференции</p>
+                </li>
+                <li>
+                  <div class="img-left-vote"><img src="img/new2.png"></div>
+                  <p>Большой зал<br class="sm-br"> <br>для докладов</p>
+                </li>
+                <li>
+                  <div class="img-left-vote"><img src="img/new3.png"></div>
+                  <p>Малый зал <br>для мастер-классов</p>
+                </li>
+                <li>
+                  <div class="img-left-vote"><img src="img/new4.png"></div>
+                  <p>Экспозона с<br class="sm-br"> демонстрацией <br> нового оборудования и<br><br class="sm-br"> стендами с софтом</p>
+                </li>
+                <li>
+                  <div class="img-left-vote"><img src="img/new5.png"></div>
+                  <p>Онлайн-трансляция<br class="sm-br"> обоих<br> залов</p>
+                </li>
+                <li>
+                  <div class="img-left-vote"><img src="img/new6.png"></div>
+                  <p>Выступления с кейсами<br class="sm-br"> от <br> обычных<br class="sm-br"> пользователей</p>
+                </li>
+                <li>
+                  <div class="img-left-vote"><img src="img/new7.png"></div>
+                  <p>Большая секция для<br> разработчиков: практикум по<br> разработке внутри Asterisk и<br> снаружи Asterisk</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="organize">
       <div class="inner">
         <div class="container-fluid">
