--- a/app/index.html
+++ b/app/index.html
@@ -246,6 +246,56 @@
         </div>
       </div>
     </div>
+    <div class="conferenc">
+      <div class="inner">
+        <div class="top-conf clearfix">
+          <div class="left-conf">
+            <ul class="clearfix">
+              <li>
+                <p>Около</p>
+                <h2>100</h2>
+                <p>профессионалов</p>
+              </li>
+              <li>
+                <p>Около</p>
+                <h2>200</h2>
+                <p>активных <br>пользователей</p>
+              </li>
+            </ul>
+          </div>
+          <div class="right-conf">
+            <div class="title-go title-go-all">
+              <h2>О конференции</h2>
+            </div>
+            <p>Ежегодная конференция по Asterisk - важное и ожидаемое мероприятие для всех, кто связан с Asterisk в нашей стране. На одной площадке мы собираем около 100 профессионалов и около 200 активных пользователей системы. На конференции вы не только узнаете много нового и полезного о мире Asterisk, но и сможете обрести новые знакомства и связи с единомышленниками.</p>
+          </div>
+        </div>
+        <div class="slider-conf">
+          <div class="arrow-slider clearfix">
+            <div class="left-arrow"><a href="#"></a></div>
+            <div class="right-arrow"><a href="#"></a></div>
+          </div>
+          <ul id="adaptive" class="clearfix">
+            <li>
+              <div class="left-slider-text">
+                <h2> Главная ценность<br> конференции - ее<br> участники</h2>
+                <p> Именно вы определяете значимость и статус мероприятия. На нашей<br> площадке собираются несколько сотен специалистов, с которыми можно<br> пообщаться за чашкой кофе в перерывах между докладами. Именно в таком<br> формате появляются самые полезные знакомства, которые неизбежно<br> приводят к новым проектам, стартапам и интрересным разработкам.</p>
+                <div class="border-bottom"></div>
+              </div>
+              <div class="right-slider-img"><img src="img/conf.jpg"></div>
+            </li>
+            <li>
+              <div class="left-slider-text">
+                <h2> Главная ценность<br> конференции - ее<br> участники</h2>
+                <p> Именно вы определяете значимость и статус мероприятия. На нашей<br> площадке собираются несколько сотен специалистов, с которыми можно<br> пообщаться за чашкой кофе в перерывах между докладами. Именно в таком<br> формате появляются самые полезные знакомства, которые неизбежно<br> приводят к новым проектам, стартапам и интрересным разработкам.</p>
+                <div class="border-bottom"></div>
+              </div>
+              <div class="right-slider-img"><img src="img/conf.jpg"></div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div class="organize">
       <div class="inner">
         <div class="container-fluid">
@@ -269,6 +319,43 @@
                     <li><img src="img/p4.jpg"></li>
                   </ul>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="choice">
+      <div class="inner">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="title-go title-go-all">
+                <h2> Вы решаете, какой будет конференция</h2>
+                <p>бла, бла, бла</p>
+              </div>
+              <div class="beer-time">
+                <h2> Должен ли вечер первого дня<br> закончиться пивом?</h2>
+                <div class="midle-beer"><img src="img/beer.png">
+                  <div class="left-yes">
+                    <h2>да</h2>
+                    <label>
+                      <input type="checkbox" name="check" class="checkbox"><span class="checkbox-custom"></span>
+                    </label>
+                  </div>
+                  <div class="right-no">
+                    <h2>нет</h2>
+                    <label>
+                      <input type="checkbox" name="check" class="checkbox"><span class="checkbox-custom"></span>
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="buttons-beer">
+                <ul>
+                  <li><a href="#">Дальше</a></li>
+                  <li><a href="#">Пропустить</a></li>
+                </ul>
               </div>
             </div>
           </div>
