--- a/app/index.html
+++ b/app/index.html
@@ -362,6 +362,37 @@
         </div>
       </div>
     </div>
+    <div class="feast">
+      <div class="inner">
+        <div class="title-go title-go-all">
+          <h2>Завершительный<br> банкет</h2>
+        </div>
+        <div class="slider-conf">
+          <div class="arrow-slider clearfix">
+            <div class="left-arrow"><a href="#"></a></div>
+            <div class="right-arrow"><a href="#"></a></div>
+          </div>
+          <ul id="feast" class="clearfix">
+            <li>
+              <div class="left-slider-text">
+                <p> Наша конференция заканчивается всегда банкетом, она<br> проходит (бла, бла, бла.)</p>
+                <p>Enter a quote from the document or a brief description of an interesting event. The caption can be placed anywhere in the document. To change the formatting of an inscription containing catchy citations, use the Drawing Tools tab</p>
+                <div class="border-bottom"></div>
+              </div>
+              <div class="right-slider-img"><img src="img/feast.jpg"></div>
+            </li>
+            <li>
+              <div class="left-slider-text">
+                <p> Наша конференция заканчивается всегда банкетом, она<br> проходит (бла, бла, бла.)</p>
+                <p>Enter a quote from the document or a brief description of an interesting event. The caption can be placed anywhere in the document. To change the formatting of an inscription containing catchy citations, use the Drawing Tools tab</p>
+                <div class="border-bottom"></div>
+              </div>
+              <div class="right-slider-img"><img src="img/feast.jpg"></div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <script>
       var scr = {"scripts":[
           {"src" : "js/libs.js", "async" : false},
