--- a/app/index.html
+++ b/app/index.html
@@ -375,16 +375,20 @@
           <ul id="feast" class="clearfix">
             <li>
               <div class="left-slider-text">
-                <p> Наша конференция заканчивается всегда банкетом, она<br> проходит (бла, бла, бла.)</p>
-                <p>Enter a quote from the document or a brief description of an interesting event. The caption can be placed anywhere in the document. To change the formatting of an inscription containing catchy citations, use the Drawing Tools tab</p>
+                <div class="box-sh">
+                  <p> Наша конференция заканчивается всегда банкетом, она<br> проходит (бла, бла, бла.)</p>
+                  <p>Enter a quote from the document or a brief description of an interesting event. The caption can be placed anywhere in the document. To change the formatting of an inscription containing catchy citations, use the Drawing Tools tab</p>
+                </div>
                 <div class="border-bottom"></div>
               </div>
               <div class="right-slider-img"><img src="img/feast.jpg"></div>
             </li>
             <li>
               <div class="left-slider-text">
-                <p> Наша конференция заканчивается всегда банкетом, она<br> проходит (бла, бла, бла.)</p>
-                <p>Enter a quote from the document or a brief description of an interesting event. The caption can be placed anywhere in the document. To change the formatting of an inscription containing catchy citations, use the Drawing Tools tab</p>
+                <div class="box-sh">
+                  <p> Наша конференция заканчивается всегда банкетом, она<br> проходит (бла, бла, бла.)</p>
+                  <p>Enter a quote from the document or a brief description of an interesting event. The caption can be placed anywhere in the document. To change the formatting of an inscription containing catchy citations, use the Drawing Tools tab</p>
+                </div>
                 <div class="border-bottom"></div>
               </div>
               <div class="right-slider-img"><img src="img/feast.jpg"></div>
