--- a/app/gde-cogda.html
+++ b/app/gde-cogda.html
@@ -179,11 +179,6 @@
               <div class="right-slider-img"><img src="img/feast.jpg"></div>
             </li>
           </ul>
-          <div class="arrow-slider clearfix">
-            <div class="border-bottom"></div>
-            <div class="right-arrow right-arrow-one"><a href="#"></a></div>
-            <div class="left-arrow left-arrow-one"><a href="#"></a></div>
-          </div>
         </div>
         <div class="slider-conf slider-conf-right">
           <ul id="where-two" class="clearfix">
@@ -261,6 +256,88 @@
               <div class="title-go title-go-all">
                 <h2>Когда</h2>
                 <p>Пока мы точно знаем, что конференция будет в сентябре. А именно Вы<br> поможете решить, в какие даты она пройдет</p>
+              </div>
+              <div class="calendar">
+                <div class="choice-day">
+                  <h2> Выберите дни:</h2>
+                  <label>
+                    <div class="first-l">
+                      <input type="radio" name="radio-test" class="radio"><span class="radio-custom"></span><span class="label">Пятница-Суббота</span>
+                    </div>
+                    <input type="radio" name="radio-test" class="radio"><span class="radio-custom"></span><span class="label">Пятница-Суббота</span>
+                  </label>
+                </div>
+                <div class="week">
+                  <h2> Выбирете неделю сентября:</h2>
+                  <div class="choice-week">
+                    <label>
+                      <input type="radio" name="radio-test" class="radio"><span class="radio-custom"></span>
+                      <input type="radio" name="radio-test" class="radio"><span class="radio-custom"></span>
+                      <input type="radio" name="radio-test" class="radio"><span class="radio-custom"></span>
+                      <input type="radio" name="radio-test" class="radio"><span class="radio-custom"></span>
+                      <input type="radio" name="radio-test" class="radio"><span class="radio-custom"></span>
+                    </label>
+                  </div>
+                  <div class="table">
+                    <table border="1">
+                      <tr>
+                        <td>Пн</td>
+                        <td>Вт</td>
+                        <td>Ср</td>
+                        <td>Чт</td>
+                        <td>Пт</td>
+                        <td>Сб</td>
+                        <td>Вс</td>
+                      </tr>
+                      <tr>
+                        <td>28</td>
+                        <td>29</td>
+                        <td>30</td>
+                        <td>31</td>
+                        <td>1</td>
+                        <td>2</td>
+                        <td>3</td>
+                      </tr>
+                      <tr>
+                        <td>4</td>
+                        <td>5</td>
+                        <td>6</td>
+                        <td>7</td>
+                        <td>8</td>
+                        <td>9</td>
+                        <td>10</td>
+                      </tr>
+                      <tr>
+                        <td>11</td>
+                        <td>12</td>
+                        <td>13</td>
+                        <td>14</td>
+                        <td>15</td>
+                        <td>16</td>
+                        <td>17</td>
+                      </tr>
+                      <tr>
+                        <td>18</td>
+                        <td>19</td>
+                        <td>20</td>
+                        <td>21</td>
+                        <td>22</td>
+                        <td>23</td>
+                        <td>24</td>
+                      </tr>
+                      <tr>
+                        <td>25</td>
+                        <td>26</td>
+                        <td>27</td>
+                        <td>28</td>
+                        <td>29</td>
+                        <td>30</td>
+                        <td>1</td>
+                      </tr>
+                    </table>
+                  </div>
+                  <div class="geen-buttons"><a href="#">Отправить</a></div>
+                </div>
               </div>
             </div>
           </div>
