--- a/app/gde-cogda.html
+++ b/app/gde-cogda.html
@@ -264,6 +264,8 @@
                     <div class="first-l">
                       <input type="radio" name="radio-test" class="radio"><span class="radio-custom"></span><span class="label">Пятница-Суббота</span>
                     </div>
+                  </label>
+                  <label>
                     <input type="radio" name="radio-test" class="radio"><span class="radio-custom"></span><span class="label">Пятница-Суббота</span>
                   </label>
                 </div>
@@ -272,9 +274,17 @@
                   <div class="choice-week">
                     <label>
                       <input type="radio" name="radio-test" class="radio"><span class="radio-custom"></span>
+                    </label>
+                    <label>
                       <input type="radio" name="radio-test" class="radio"><span class="radio-custom"></span>
+                    </label>
+                    <label>
                       <input type="radio" name="radio-test" class="radio"><span class="radio-custom"></span>
+                    </label>
+                    <label>
                       <input type="radio" name="radio-test" class="radio"><span class="radio-custom"></span>
+                    </label>
+                    <label>
                       <input type="radio" name="radio-test" class="radio"><span class="radio-custom"></span>
                     </label>
                   </div>
