--- a/app/gde-cogda.html
+++ b/app/gde-cogda.html
@@ -179,6 +179,11 @@
               <div class="right-slider-img"><img src="img/feast.jpg"></div>
             </li>
           </ul>
+          <div class="arrow-slider clearfix">
+            <div class="border-bottom"></div>
+            <div class="right-arrow right-arrow-one"><a href="#"></a></div>
+            <div class="left-arrow left-arrow-one"><a href="#"></a></div>
+          </div>
         </div>
         <div class="slider-conf slider-conf-right">
           <ul id="where-two" class="clearfix">
@@ -208,8 +213,8 @@
           <div class="arrow-slider clearfix">
             <div class="border-bottom"></div>
             <div class="poz-right">
-              <div class="left-arrow left-arrow-one"><a href="#"></a></div>
-              <div class="right-arrow right-arrow-one"><a href="#"></a></div>
+              <div class="left-arrow left-arrow-one left-arrow-two"><a href="#"></a></div>
+              <div class="right-arrow right-arrow-one right-arrow-two"><a href="#"></a></div>
             </div>
           </div>
         </div>
@@ -242,8 +247,8 @@
           </ul>
           <div class="arrow-slider clearfix">
             <div class="border-bottom"></div>
-            <div class="right-arrow right-arrow-one"><a href="#"></a></div>
-            <div class="left-arrow left-arrow-one"><a href="#"></a></div>
+            <div class="right-arrow right-arrow-one left-arrow-tree"><a href="#"></a></div>
+            <div class="left-arrow left-arrow-one right-arrow-tree"><a href="#"></a></div>
           </div>
         </div>
       </div>
