--- a/app/index.html
+++ b/app/index.html
@@ -272,8 +272,8 @@
         </div>
         <div class="slider-conf">
           <div class="arrow-slider clearfix">
-            <div class="left-arrow"><a href="#"></a></div>
-            <div class="right-arrow"><a href="#"></a></div>
+            <div class="left-arrow left-arrow-r"><a href="#"></a></div>
+            <div class="right-arrow right-arrow-r"><a href="#"></a></div>
           </div>
           <ul id="adaptive" class="clearfix">
             <li>
@@ -369,8 +369,8 @@
         </div>
         <div class="slider-conf">
           <div class="arrow-slider clearfix">
-            <div class="left-arrow"><a href="#"></a></div>
-            <div class="right-arrow"><a href="#"></a></div>
+            <div class="left-arrow left-arrow-i"><a href="#"></a></div>
+            <div class="right-arrow right-arrow-i"><a href="#"></a></div>
           </div>
           <ul id="feast" class="clearfix">
             <li>
