--- a/app/gde-cogda.html
+++ b/app/gde-cogda.html
@@ -262,7 +262,7 @@
                 <h2>Когда</h2>
                 <p>Пока мы точно знаем, что конференция будет в сентябре. А именно Вы<br> поможете решить, в какие даты она пройдет</p>
               </div>
-              <div class="calendar">
+              <div class="calendar-in">
                 <div class="choice-day">
                   <h2> Выберите дни:</h2>
                   <label>
